--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
 asgiref==3.7.2
+astroid==3.1.0
+dill==0.3.8
 Django==4.1
+isort==5.13.2
+mccabe==0.7.0
+platformdirs==4.2.0
+pylint==3.1.0
 sqlparse==0.4.4
+tomli==2.0.1
+tomlkit==0.12.4
 typing_extensions==4.10.0
