--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ isort==5.13.2
 mccabe==0.7.0
 platformdirs==4.2.0
 pylint==3.1.0
+python-dotenv==1.0.1
 sqlparse==0.4.4
 tomli==2.0.1
 tomlkit==0.12.4
