feat: creating gallery app

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,7 +1,10 @@
 [MAIN]
 
 disable =
-      import-outside-toplevel
+      import-outside-toplevel,
+      missing-function-docstring,
+      unrecognized-option,
+      missing-module-docstring,
 
 # Analyse import fallback blocks. This can be used to support both Python 2 and
 # 3 compatible code, which means that the block might have code that exists
